plugins/mermaid/testData/intention/gitgraph/checkout.mermaid
gitGraph
  checkout <error descr="Branch 'master' does not exist">master</error>
  checkout "<error descr="Branch 'master' does not exist">master</error>"
  checkout main